Fixing some issues thrown up by ErrorProne